cargo-features = ["edition"]

[package]
name = "whit"
version = "0.0.1"
authors = ["Nathan Jaremko <njaremko@gmail.com>"]
edition = '2018'

[dependencies]
iota-lib-rs = {path = "../iota-lib-rs"}
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
log = "0.4"
futures-preview = "0.2"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
failure = "0.1"
rand = "0.5"
reqwest = "0.8"
lazy_static = "1"